--- a/css/beauty.css
+++ b/css/beauty.css
@@ -177,3 +177,14 @@ header
 {
     width: 17%;
 }
+.pieds
+{
+    width: 100%;
+    color: whitesmoke;
+    font-family: monospace;
+    text-align: center;
+    margin-top: 15%;
+    padding-bottom: 3%;
+    background-color:rgba(3, 16, 35, 0.377) ;
+
+}
