insersion d'objet et design de la page connection

--- a/css/beauty.css
+++ b/css/beauty.css
@@ -206,7 +206,7 @@ header
 
 .page1 .logo
 {
-   width: 50%;
+   width: 49%;
    border: solid black;
    
 }
@@ -220,9 +220,10 @@ header
 
 .page1 .contenue
 {
-    width: 50%;
+    width: 49%;
     display: flex;
     flex-direction: column;
+    box-shadow: 0 0 17px 0 black;
 
 }
 
@@ -261,6 +262,17 @@ header
     text-align: center;
     color: whitesmoke;
     margin-bottom: 4%;
+}
+
+
+.page1 .contenue button 
+{
+    background-color:rgba(189, 33, 85, 0.377) ;
+    width: 60%;
+    margin: 5% auto;
+    color: black;
+    font-family: monospace;
+    font-size: 1rem;
 }
 @media screen and (max-width: 900px)
 {
