finalisation du css pour la page connection

--- a/css/beauty.css
+++ b/css/beauty.css
@@ -223,7 +223,7 @@ header
     width: 49%;
     display: flex;
     flex-direction: column;
-    box-shadow: 0 0 17px 0 black;
+    box-shadow: 0 0 17px 0 yellow;
 
 }
 
