--- a/css/beauty.css
+++ b/css/beauty.css
@@ -14,7 +14,7 @@ header
 {
     background-image:url("../img/musiquefond2.jpg");
     width: 100%;
-    box-shadow: 0 0 17px 0 whitesmoke ;
+    box-shadow: 0 0 17px 0 yellow ;
     padding: 2px;
     height: 200px;
     
@@ -201,13 +201,14 @@ header
     height: 90%;
     margin: 5% auto;
     align-content: space-around;
-    background-image: url(../img/images4.jpg);
+    
 }
 
 .page1 .logo
 {
    width: 49%;
-   border: solid black;
+   margin-right: 20px;
+  
    
 }
 
@@ -220,10 +221,12 @@ header
 
 .page1 .contenue
 {
-    width: 49%;
+    width: 70%;
     display: flex;
     flex-direction: column;
+    margin: 2% auto;
     box-shadow: 0 0 17px 0 yellow;
+    background-image: url(../img/images4.jpg);
 
 }
 
