responsive et changement des couleur des fond

--- a/css/beauty.css
+++ b/css/beauty.css
@@ -4,7 +4,7 @@
 }
 body
 {
-    background: linear-gradient(90deg,#2980B9,#8E44ad);
+    background: linear-gradient(90deg,rgb(189, 33, 85),#8E44ad);;
 }
 
 
